# openflow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  biome.json  docker-compose.prod.yml  docker-compose.yml  index.html  mcp-server.json  package.json  plan.md  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  typeshare.toml  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml
.husky/: pre-commit  pre-push
.storybook/: main.ts  preview.tsx
.zenflow/tasks/init-1cd4/: plan.md  requirements.md  spec.md
crates/: CLAUDE.md
crates/openflow-contracts/: CLAUDE.md  Cargo.toml
crates/openflow-contracts/src/: lib.rs  validation.rs
crates/openflow-contracts/src/endpoints/: mod.rs
crates/openflow-contracts/src/entities/: artifact.rs  chat.rs  executor.rs  git.rs  message.rs  mod.rs  process.rs  project.rs  search.rs  settings.rs  task.rs  workflow.rs
crates/openflow-contracts/src/events/: mod.rs
crates/openflow-contracts/src/requests/: chat.rs  executor.rs  git.rs  message.rs  mod.rs  process.rs  project.rs  search.rs  settings.rs  task.rs  terminal.rs  workflow.rs
crates/openflow-contracts/src/responses/: mod.rs
crates/openflow-core/: CLAUDE.md  Cargo.toml
crates/openflow-core/src/: lib.rs
crates/openflow-core/src/events/: broadcaster.rs  mod.rs  types.rs
crates/openflow-core/src/services/: artifact.rs  chat.rs  error.rs  executor.rs  executor_profile.rs  git.rs  github.rs  message.rs  mod.rs  process.rs  project.rs  search.rs  settings.rs  task.rs  terminal.rs  workflow.rs
crates/openflow-db/: CLAUDE.md  Cargo.toml
crates/openflow-db/migrations/: 002_search_index.sql  003_standalone_chats.sql  005_chat_archived.sql
crates/openflow-db/src/: config.rs  error.rs  lib.rs  pool.rs
crates/openflow-process/: CLAUDE.md  Cargo.toml
crates/openflow-process/src/: error.rs  executor.rs  lib.rs  native.rs  output.rs  pty.rs  spawn.rs  types.rs
crates/openflow-server/: CLAUDE.md  Cargo.toml
crates/openflow-server/src/: config.rs  error.rs  lib.rs  main.rs  shutdown.rs  state.rs
crates/openflow-server/src/routes/: chats.rs  executor.rs  git.rs  github.rs  health.rs  messages.rs  mod.rs  processes.rs  projects.rs  search.rs  settings.rs  tasks.rs  terminal.rs  workflows.rs
crates/openflow-server/src/ws/: broadcaster.rs  handler.rs  manager.rs  mod.rs
scripts/: CLAUDE.md  generate-command-map.ts  generate-queries.ts  generate-types.sh  generate-zod.ts  validate-a11y.ts  validate-all.ts  validate-architecture.ts  validate-circular-deps.ts  validate-claude-md.ts  validate-contracts.ts  validate-dead-code.ts  validate-hooks.ts  validate-primitives.ts  validate-queries.ts  validate-routes.ts  validate-rust-services.ts  validate-storybook.ts  validate-tauri-commands.ts  validate-test-coverage.ts  validate-type-staleness.ts  validate-ui-stateless.ts  validate-zod-coverage.ts
scripts/lib/: config.ts  file-scanner.ts  import-analyzer.ts  reporter.ts  rust-analyzer.ts  types.ts
src/: CLAUDE.md  main.tsx  routerContext.ts
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_search_index.sql  004_claude_session.sql  006_project_archived.sql
src-tauri/src/: broadcaster.rs  lib.rs  main.rs
src-tauri/src/commands/: artifacts.rs  chats.rs  executor.rs  git.rs  github.rs  messages.rs  mod.rs  processes.rs  projects.rs  search.rs  settings.rs  system.rs  tasks.rs  terminal.rs  workflows.rs
src-tauri/src/db/: mod.rs  pool.rs
src-tauri/src/process/: mod.rs  output.rs  pty.rs  spawn.rs
src-tauri/src/services/: chat_service.rs  executor_profile_service.rs  executor_service.rs  git_service.rs  github_service.rs  message_service.rs  mod.rs  process_service.rs  project_service.rs  search_service.rs  settings_service.rs  task_service.rs  terminal_service.rs  workflow_service.rs
src-tauri/src/types/: chat.rs  executor.rs  git.rs  message.rs  mod.rs  process.rs  project.rs  task.rs  workflow.rs
src-tauri/workflows/: bugfix.md  feature.md  refactor.md
src/providers/: GlobalShortcutsProvider.tsx  KeyboardShortcutsDialogProvider.tsx  NavigationProvider.tsx  ProjectSelectionProvider.tsx  ThemeProvider.tsx  ToastProvider.tsx  WebviewBoundsProvider.tsx  index.ts
src/routes/: __root.tsx  _app.tsx  archive.tsx  chats.$chatId.tsx  chats.index.tsx  chats.tsx  index.tsx  projects.$projectId.tsx  projects.tsx  settings.index.tsx  settings.profiles.tsx  settings.projects.tsx  settings.tsx  tasks.$taskId.tsx  tasks.tsx
src/routes/_app/: archive.tsx  chats.$chatId.tsx  chats.index.tsx  chats.tsx  index.tsx  projects.$projectId.tsx  projects.tsx  settings.index.tsx  settings.profiles.tsx  settings.projects.tsx  settings.shortcuts.tsx  settings.tsx  tasks.$taskId.tsx  tasks.tsx
src/styles/: globals.css
tests/e2e/: project.test.ts  setup.ts  task.test.ts
tests/hooks/: useConfirmDialog.test.ts  useKeyboardShortcuts.test.ts
tests/primitives/: Article.test.ts  Aside.test.ts  Box.test.ts  Flex.test.ts  Footer.test.ts  Grid.test.ts  Header.test.ts  Heading.test.ts  Image.test.ts  Link.test.ts  List.test.ts  ListItem.test.ts  Main.test.ts  Nav.test.ts  Paragraph.test.ts  Section.test.ts  Stack.test.ts  Text.test.ts  VisuallyHidden.test.ts
tests/queries/: chats.test.ts  projects.test.ts  tasks.test.ts  utils.test.ts
tests/ui/atoms/: Badge.test.ts  Button.test.ts  Checkbox.test.ts  HamburgerButton.test.ts  Icon.test.ts  Input.test.ts  Label.test.ts  Skeleton.test.ts  SkipLink.test.ts  Spinner.test.ts  Textarea.test.ts  ThemeToggle.test.ts  ThemeToggleCompact.test.ts  Toast.test.ts  ToastProvider.test.ts
tests/ui/molecules/: Card.test.ts  Dialog.test.ts  Dropdown.test.ts  EmptyState.test.ts  EntityContextMenu.test.ts  FormField.test.ts  Menu.test.ts  SkeletonArchiveList.test.ts  SkeletonCard.test.ts  SkeletonChat.test.ts  SkeletonList.test.ts  SkeletonProjectCard.test.ts  SkeletonSettings.test.ts  (+5 more)
tests/utils/: logger.test.ts
tests/validation/: schemas.test.ts
(+50 files in other folders)
