[package]
name = "openflow"
version = "0.1.0"
description = "AI Task Orchestration Desktop Application"
authors = ["OpenFlow Team"]
edition = "2021"

[lib]
name = "openflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-mcp-gui = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typeshare = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
portable-pty = "0.8"
shellexpand = "3"
regex = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
mcp-gui = ["dep:tauri-plugin-mcp-gui"]

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
