[package]
name = "openflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AI Task Orchestration Desktop Application"

[lib]
name = "openflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
# Internal crates
openflow-contracts.workspace = true
openflow-db.workspace = true
openflow-core.workspace = true
openflow-process.workspace = true
openflow-server.workspace = true

# Tauri
tauri.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-mcp-gui = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Type generation
typeshare.workspace = true

# Database
sqlx.workspace = true

# Async runtime
tokio.workspace = true

# Time & IDs
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Logging
log.workspace = true

# Process management
portable-pty.workspace = true

# Utilities
shellexpand.workspace = true
regex.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
mcp-gui = ["dep:tauri-plugin-mcp-gui"]

[dev-dependencies]
tempfile.workspace = true
