[package]
name = "openflow-contracts"
version = "0.1.0"
edition = "2021"
description = "API contracts and type definitions for OpenFlow"
authors = ["OpenFlow Team"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typeshare = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
