[package]
name = "openflow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core business logic for OpenFlow"

[dependencies]
# Internal crates
openflow-contracts.workspace = true
openflow-db.workspace = true
openflow-process.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time & IDs
chrono.workspace = true
uuid.workspace = true

# Logging
log.workspace = true
tracing.workspace = true

# Utilities
regex.workspace = true
shellexpand.workspace = true

# Async traits
async-trait = "0.1"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
openflow-db = { workspace = true, features = ["test-utils"] }
